--- a/css/materialize.css
+++ b/css/materialize.css
@@ -3,6 +3,15 @@
  * Copyright 2014-2017 Materialize
  * MIT License (https://raw.githubusercontent.com/Dogfalo/materialize/master/LICENSE)
  */
+
+.materialize-orange {
+  color: #f86942 !important;
+}
+
+.materialize-violet {
+  color: #352245 !important;
+}
+
 .materialize-red {
   background-color: #e51c23 !important;
 }
