--- a/css/materialize.css
+++ b/css/materialize.css
@@ -4282,7 +4282,7 @@ table span.badge {
 
 nav {
   color: #fff;
-  background-color: #ee6e73;
+  background-color: #352245;
   width: 100%;
   height: 56px;
   line-height: 56px;
