--- a/css/materialize.css
+++ b/css/materialize.css
@@ -12,6 +12,10 @@
   background-color: #352245 !important;
 }
 
+.materialize-viola-text {
+  color: #352245 !important;
+}
+
 .materialize-red {
   background-color: #e51c23 !important;
 }
