--- a/css/materialize.css
+++ b/css/materialize.css
@@ -5,6 +5,10 @@
  */
 
 .materialize-orange {
+  background-color: #f86942 !important;
+}
+
+.materialize-orange-text {
   color: #f86942 !important;
 }
 
