--- a/css/materialize.css
+++ b/css/materialize.css
@@ -2997,7 +2997,7 @@ ul.staggered-list li {
 .page-footer {
   padding-top: 20px;
   color: #fff;
-  background-color: #ee6e73;
+  background-color: #002b45;
 }
 
 .page-footer .footer-copyright {
