--- a/css/style.css
+++ b/css/style.css
@@ -145,6 +145,11 @@ p {
   will-change: border;
 }
 
+.btn-form {
+  width: 100%;
+  padding-top: 1rem;
+}
+
 footer .page-footer {
   margin: 0;
   background-color: #002b45;
