--- a/css/materialize.css
+++ b/css/materialize.css
@@ -3005,7 +3005,7 @@ ul.staggered-list li {
 .page-footer {
   padding-top: 20px;
   color: #fff;
-  background-color: #002b45;
+  background-image: linear-gradient(to left,#F09459, #e66586);
 }
 
 .page-footer .footer-copyright {
